<resources>
    <string name="app_name">Spalanie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_entries">Previous entries</string>
    <string name="save">Save</string>
    <string name="odometer_status">Odometer status</string>
    <string name="new_data">New data</string>
    <string name="fuel_volume">Fuel volume</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="remarks">Remarks</string>
    <string name="sure_delete">Are you sure you want to delete?</string>
    <string name="delete_ask">Delete?</string>
    <string name="cancel">Cancel</string>
    <string name="location">Location</string>
    <string name="cannot_find_localization">Cannot find localization.</string>
</resources>